webargs instead of arguments

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -3,4 +3,6 @@ Breaking Changes
 
 4/1/2009
 --------
-webify.tests.get and webify.tests.post now return a response object rather than a tuple of (status, body).  
+
+- webify.tests.get and webify.tests.post now return a response object rather than a tuple of (status, body).  
+- from webify.controllers import webargs instead of from webify.controllers import arguments
